# claude-mcp-practice

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORKFLOW.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
config/: mcp-server-config.json
examples/: client_example.py  extended_server.py
scripts/: setup.py
src/claude_mcp_server/: __init__.py  server.py
tests/: test_server.py
