[project]
name = "claude-mcp-server"
version = "0.1.0"
description = "A basic Python MCP server for Claude integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
claude-mcp-server = "claude_mcp_server.server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true